--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -17,10 +17,19 @@ target_compile_features(benchmark PRIVATE cxx_std_17)
 if(MSVC)
     target_compile_options(benchmark PRIVATE /O2 /DNDEBUG)
 else()
-    target_compile_options(benchmark PRIVATE 
-        -O3          # Maximum optimization
-        -march=native # Optimize for current CPU
-        -DNDEBUG     # Disable assertions
-        -flto        # Link-time optimization
-    )
+    # Only use -march=native if not in CI environment
+    if(NOT DEFINED ENV{CI})
+        target_compile_options(benchmark PRIVATE 
+            -O3          # Maximum optimization
+            -march=native # Optimize for current CPU
+            -DNDEBUG     # Disable assertions
+            -flto        # Link-time optimization
+        )
+    else()
+        target_compile_options(benchmark PRIVATE 
+            -O3          # Maximum optimization
+            -DNDEBUG     # Disable assertions
+            -flto        # Link-time optimization
+        )
+    endif()
 endif()
